--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,8 +97,8 @@ const projects = (await getCollection('work'))
 						<span class="stat-label">Years survived on Earth</span>
 					  </div>
 					  <div class="stat">
-						<span class="stat-number">2</span>
-						<span class="stat-label">Nationalities</span>
+						<span class="stat-number">6</span>
+						<span class="stat-label">Years of leadership experience</span>
 					  </div>
 					  <div class="stat">
 						<span class="stat-number">4</span>
@@ -150,8 +150,8 @@ const projects = (await getCollection('work'))
 					<h4>Random Facts</h4>
 					<div class="stats-grid">
 					  <div class="stat">
-						<span class="stat-number">∞</span>
-						<span class="stat-label">Ideas per Minute</span>
+						<span class="stat-number">6</span>
+						<span class="stat-label">Plants owned</span>
 					  </div>
 					  <div class="stat">
 						<span class="stat-number">27</span>
