--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,12 +97,12 @@ const projects = (await getCollection('work'))
 						<span class="stat-label">Years survived on Earth</span>
 					  </div>
 					  <div class="stat">
-						<span class="stat-number">6</span>
-						<span class="stat-label">Years of leadership experience</span>
-					  </div>
-					  <div class="stat">
 						<span class="stat-number">4</span>
 						<span class="stat-label">Languages Spoken</span>
+					  </div>
+					  <div class="stat">
+						<span class="stat-number">6</span>
+						<span class="stat-label">Years leading teams</span>
 					  </div>
 					</div>
 				  </div>
