--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -177,11 +177,10 @@ const projects = (await getCollection('work'))
 </BaseLayout>
 
 <style>
-	/* ========== BASE (MOBILE FIRST) ========== */
 	
 	.hero {
 		position: relative;
-		font-size: var(--text-lg);
+		font-size: 5rem;
 		text-align: center;
 	}
 	
@@ -197,7 +196,7 @@ const projects = (await getCollection('work'))
 		position: relative;
 		width: 100%;
 		max-width: 320px;
-		aspect-ratio: 9/10;
+		aspect-ratio: 9/8;
 		margin-inline: auto;
 		perspective: 1200px;
 	}
