--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -60,6 +60,7 @@ import Pill from '../components/Pill.astro';
 						<span class="pill">Go</span>
 						<span class="pill">JavaScript</span>
 						<span class="pill">Node.js</span>
+						<span class="pill">Astro</span>
 						<span class="pill">HTML</span>
 						<span class="pill">CSS</span>
 						<span class="pill">Rust</span>
@@ -84,7 +85,6 @@ import Pill from '../components/Pill.astro';
 						<span class="pill">Git</span>
 						<span class="pill">Github</span>						
 						<span class="pill">VS Code</span>
-						<span class="pill">Astro</span>
 						<span class="pill">PostgreSQL</span>
 						<span class="pill">Docker</span>
 						</div>
@@ -165,7 +165,7 @@ import Pill from '../components/Pill.astro';
 
 .about-container {
 	width: 100%;
-	max-width: 75rem;
+	max-width: 85rem;
 	padding-inline: 2rem;
 	margin-inline: auto;
 	display: flex;
@@ -173,6 +173,7 @@ import Pill from '../components/Pill.astro';
 	gap: 5rem;
 	color: var(--gray-50);
 	font-size: 18px;
+	font-weight: 500;
 }
 
 .skills-box {
