--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,6 +178,10 @@ const projects = (await getCollection('work'))
 
 <style>
 	
+	.h4{
+		text-align: center;
+	}
+
 	.hero {
 		position: relative;
 		font-size: 5rem;
@@ -291,13 +295,18 @@ const projects = (await getCollection('work'))
 	}
 	
 	.stat-label {
-		font-size: 1rem;
+		font-size: 1.1rem;
 		color: rgba(253, 194, 203, 0.918);
 		margin-top: 0.5rem;
 		text-align: center;
 		padding-inline: 1rem;
 	}
 	
+	.stat-group h4 {
+		text-align: center;
+		color: rgba(253, 194, 203, 0.918);
+	}
+
 	.gallery {
 		padding-inline: 1rem;
 	}
