--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -87,8 +87,10 @@ const { Content } = await render(entry);
 	}
 
 	.content {
-		max-width: 65ch;
+		max-width: 85ch;
 		margin-inline: auto;
+		font-size: 1.25rem; /* around 20px */
+		line-height: 1.6; /* better readability */
 	}
 
 	.content > :global(* + *) {
