--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -21,7 +21,6 @@ const { data, id } = Astro.props.project;
 		display: grid;
 		grid-template: 1fr / 1fr;
 		height: 11rem;
-		background: var(--gradient-subtle);
 		border: 1px solid var(--gray-800);
 		border-radius: 0.75rem;
 		overflow: hidden;
@@ -35,15 +34,13 @@ const { data, id } = Astro.props.project;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-		grid-area: 1 / 1;
-		z-index: 0;
+		object-position: center center; /* Add this */
 	}
 
 	.title-bar {
 		grid-area: 1 / 1;
-		align-self: end;
 		width: 100%;
-		background: rgba(16, 1, 39, 0.623);
+		background: rgba(71, 13, 126, 0.63);
 		display: flex;
 		justify-content: center;
 		padding: 0.5rem 0;
