--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -56,6 +56,8 @@ import Icon from './Icon.astro';
 	text-align: center;
 	cursor: pointer;
 	transition: transform 0.4s ease, box-shadow 0.4s ease;
+	width: 18.5rem;
+	height: 11rem;
 }
 
 .skill-title {
@@ -87,7 +89,7 @@ import Icon from './Icon.astro';
 	text-align: center;
 	color: rgba(253, 194, 203, 0.9); /* pink readable text */
 	background: rgba(10, 10, 30, 0.95); /* darker background */
-	font-size: 1.1rem;
+	font-size: 1.15rem;
 	line-height: 1.5;
 	border-radius: 1.5rem;
 	transform: translateY(0);
